# solana-sniper

./: .env.example  .gitignore  pyproject.toml
.github/workflows/: ci.yml
deploy/: Dockerfile  Dockerfile.scout  coinpump-scout.service  deploy.sh  docker-compose.yml  health_check.sh  nginx.conf  setup.sh  sniper-dashboard.service  solana-sniper.service  sync.sh
docs/code-review/: 2026-03-25-critical-review.md
docs/superpowers/plans/: 2026-03-22-smart-money-rebuild.md
docs/superpowers/specs/: 2026-03-22-dashboard-redesign.md  2026-03-22-smart-money-rebuild-design.md
sniper/: __init__.py  __main__.py  bundle_check.py  config.py  copy_trader.py  dashboard.py  db.py  exceptions.py  executor.py  godmode.py  jito.py  jupiter.py  kelly.py  main.py  models.py  multi_wallet.py  position_manager.py  safety.py  signal_reader.py  telegram_bot.py  telegram_notify.py  wallet.py  wallet_stats.py  web.py
tests/: conftest.py  test_bundle_check.py  test_config.py  test_conviction_boost.py  test_copy_trader.py  test_dashboard.py  test_db.py  test_executor.py  test_jupiter.py  test_position_manager.py  test_signal_reader.py  test_signal_reader_no_dead_hours.py  test_wallet.py
