[project]
name = "solana-sniper"
version = "0.1.0"
description = "Solana trading bot consuming coinpump-scout signals via Jupiter V6"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.10,<4",
    "aiosqlite>=0.20,<1",
    "pydantic>=2.6,<3",
    "pydantic-settings>=2.2,<3",
    "solana>=0.34,<1",
    "solders>=0.21,<1",
    "structlog>=24.1,<25",
    "python-dotenv>=1.0,<2",
    "base58>=2.1,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
    "aioresponses>=0.7,<1",
    "pytest-mock>=3.12,<4",
]

[project.scripts]
solana-sniper = "sniper.main:_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sniper"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
